--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "firebase-admin": "^13.0.1",
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.462.0",
-    "next": "15.0.3",
+    "next": "^14.1.0",
     "next-auth": "^4.24.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,15 +40,15 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8.4.49",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.3.3"
   }
 }
