--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,13 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "forceConsistentCasingInFileNames": true
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
